# promptune

./: .coveragerc-linux  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.toml  install.sh  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/: check.md  fix-bug.md  implement.md  test.md
.claude/hooks/: check-docs-reminder.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: gemini_review.py
.github/workflows/: ci.yml  code-review.yml  release.yml
docs/: ARCHITECTURE.md  MANUAL_TESTING.md  USER_GUIDE.md  VERIFICATION_REPORT.md
docs/assets/: demo.tape  gen_demo_gifs.py  wizard_gif.py
docs/superpowers/blueprint/: promptune_blueprint.md
docs/superpowers/plans/: 2026-03-13-ci-pipeline.md  2026-03-15-distribution-and-beta-testing.md  2026-03-15-phase1-next-iteration.md  2026-03-17-cross-terminal-shell-integration.md  2026-03-17-interactive-config-setup.md  2026-03-28-enhancement-phase.md  2026-03-28-phase2-os-hotkey-daemon.md  2026-03-29-code-quality-fixes.md  2026-03-29-coverage-improvement.md  2026-03-29-phase3-linux-daemon.md  2026-04-05-mcp-server-and-auto-enhance.md
docs/superpowers/specs/: 2026-03-13-ci-pipeline-design.md  2026-03-13-promptune-design.md  2026-03-14-distribution-and-beta-testing-design.md  2026-03-15-phase1-next-iteration-design.md  2026-03-17-cross-terminal-shell-integration-design.md  2026-03-17-interactive-config-setup-design.md  2026-03-28-enhancement-phase-design.md  2026-03-28-phase2-os-hotkey-daemon-design.md  2026-03-29-code-quality-fixes.md  2026-03-29-coverage-improvement.md  2026-03-29-phase3-linux-daemon-design.md  2026-04-05-mcp-server-and-auto-enhance-design.md
promptune/: __init__.py  __main__.py  cli.py  config.py  dedup.py  engine.py  formatter.py  gate.py  history.py  meta_prompt.py  pqs.py  preferences.py  scorer.py  setup.py  shell.py  templates.py  tier0.py  tui.py
promptune/context/: __init__.py  collectors.py  ranker.py  sanitizer.py
promptune/daemon/: __init__.py  clipboard.py  daemon.py  hotkey.py  ipc.py  launchagent.py  notify.py  prewarm.py
promptune/daemon/platform/: __init__.py  base.py  linux_service.py  linux_wayland.py  linux_x11.py  macos.py
promptune/hooks/: __init__.py  claude_code.py  codex.py
promptune/mcp/: __init__.py  server.py
promptune/providers/: __init__.py  anthropic.py  local.py  openai.py  openrouter.py
tests/: conftest.py  test_cli.py  test_config.py  test_dedup.py  test_docs_readiness.py  test_engine.py  test_formatter.py  test_gate.py  test_history.py  test_install.py  test_main.py  test_meta_prompt.py  test_polish.py  test_pqs.py  test_preferences.py  test_scorer.py  test_setup.py  test_shell.py  test_templates.py  test_tier0.py  test_tui.py
tests/test_context/: test_collectors.py  test_ranker.py  test_sanitizer.py
tests/test_daemon/: test_clipboard.py  test_daemon.py  test_hotkey.py  test_ipc.py  test_launchagent.py  test_notify.py  test_prewarm.py  test_prewarm_timer.py
tests/test_daemon/test_platform/: test_base.py  test_init.py  test_linux_service.py  test_linux_wayland.py  test_linux_x11.py  test_macos.py  test_wayland_integration.py  test_x11_integration.py
tests/test_github_scripts/: test_gemini_review.py
tests/test_hooks/: test_claude_code.py  test_codex.py
tests/test_mcp/: test_server.py
tests/test_providers/: test_anthropic.py  test_base.py  test_local.py  test_openai.py  test_openrouter.py
